// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewCommand#View cancelled should render cancelled message and call exit 1`] = `"Cancelled!"`;

exports[`NewCommand#View configure step should show an error when no name provided 1`] = `"[31mCalled [33mbeaver new[31m with no name.[39m"`;

exports[`NewCommand#View configure step should show the first question 1`] = `
"[32mApp name: test-app[39m
What is the application version?: [2m0.0.0[22m"
`;

exports[`NewCommand#View configure step should show the first question with version provided 1`] = `
"[32mApp name: test-app[39m
What is the application version?: [7m1[27m.0.0"
`;

exports[`NewCommand#View configure step should show the fourth question 1`] = `
"[32mApp name: test-app[39m
Choose a license: [2mMIT[22m"
`;

exports[`NewCommand#View configure step should show the fourth question with license provided 1`] = `
"[32mApp name: test-app[39m
Choose a license: [7mI[27mSC"
`;

exports[`NewCommand#View configure step should show the second question 1`] = `
"[32mApp name: test-app[39m
What is the application description?: [2mA brookjs application[22m"
`;

exports[`NewCommand#View configure step should show the second question with description provided 1`] = `
"[32mApp name: test-app[39m
What is the application description?: [7mA[27m test application"
`;

exports[`NewCommand#View configure step should show the third question 1`] = `
"[32mApp name: test-app[39m
Relative to the project, where will the source code live?: [2msrc[22m"
`;

exports[`NewCommand#View configure step should show the third question with dir provided 1`] = `
"[32mApp name: test-app[39m
Relative to the project, where will the source code live?: [7mc[27mlient"
`;

exports[`NewCommand#View confirm step should display the current configruation 1`] = `
"Configuration:
name: [32mtest-app[39m
version: [32m1.0.0[39m
description: [32mA test application[39m
dir: [32mclient[39m
license: [32mISC[39m
[34m❯[39m [39m[34mYes[39m[39m
  No"
`;

exports[`NewCommand#View creating should render spinner during creating 1`] = `"[32m▹▹▹▹▹[39m[39mCreating app test-app[39m"`;
